started adding html based grid

--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,15 @@
 <head>
     <title>The Tool Shed</title>
 
+    <link rel="stylesheet" type="text/css" href="grid.css">
+
 </head>
 <body>
 
 
-
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash-compat/3.7.0/lodash.min.js"></script>
 <script type="text/javascript" src="life.js"></script>
+<script type="text/javascript" src="grid.js"></script>
 
 </body>
 
