--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 
-
+<div>
+	<button onclick="startLife();">Start</button>
+	<button onclick="stopLife();">Stop</button>
+</div>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash-compat/3.7.0/lodash.min.js"></script>
 <script type="text/javascript" src="life.js"></script>
 <script type="text/javascript" src="grid.js"></script>
