--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
 <body>
 
 <div>
-	<button onclick="startLife();">Start</button>
-	<button onclick="stopLife();">Stop</button>
+	<button onclick="Life.start();">Start</button>
+	<button onclick="Life.stop();">Stop</button>
 </div>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash-compat/3.7.0/lodash.min.js"></script>
 <script type="text/javascript" src="life.js"></script>
