continued adding grid functionality -- WIP

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
 <div>
 	<button onclick="Life.start();">Start</button>
 	<button onclick="Life.stop();">Stop</button>
+    <button onclick="Life.clear();">Clear</button>
+    <button onclick="Life.test('testBeehive2');">Load Test Pattern</button>
 </div>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash-compat/3.7.0/lodash.min.js"></script>
 <script type="text/javascript" src="life.js"></script>
